--- a/Data_Manipulation.Rmd
+++ b/Data_Manipulation.Rmd
@@ -25,9 +25,10 @@ pups_data = janitor::clean_names(pups_data)
 #Select variables
 
 ```{r}
-select(litters_data,group, litter_number, gd0_weight)
+select(litters_data, group, litter_number, gd0_weight)
 
 select(litters_data, litter_number, gd0_weight, pups_survive)
+
 ```
 
 ..by range
@@ -43,7 +44,7 @@ select(litters_data, group, gd_of_birth:pups_survive)
 select(litters_data, -litter_number)
 ```
 
-
+Renaming variables
 
 ```{r}
 select(litters_data, group, litter_number, gest_day_0_weight = gd0_weight)
@@ -60,7 +61,7 @@ select(litters_data, litter_number, starts_with("pup"))
 select(litters_data, litter_number, everything())
 ```
 
-Learning Assessment
+Learning Assessment 1
 
 ```{r}
 select(pups_data, litter_number, sex, pd_ears)
@@ -78,7 +79,6 @@ filter(litters_data, pups_born_alive == 8)
 filter(litters_data, !is.na(gd0_weight))
 
 filter(litters_data, group %in% c("Low7,'Low8"))
-
 ```
 
 
@@ -103,6 +103,16 @@ mutate(litters_data,
 )
 ```
 
+Learning Assessment 2
+```{r}
+mutate(pups_data, 
+        pivot_minus7 = pd_pivot - 7,
+        pd_sum = pd_ears + pd_eyes + pd_pivot 
+                + pd_walk
+)
+        
+```
+
 ## Arrange
 
 Putting your data in new order
@@ -110,7 +120,12 @@ Putting your data in new order
 ```{r}
 arrange(litters_data, gd0_weight)
 arrange(litters_data, desc(pups_born_alive), gd0_weight)
+
+head(arrange(litters_data, group, pups_born_alive), 10)
 ```
+Multi step Data Manipulation
+
+Defining Intermediate Datasets
 
 ```{r}
 litters_data_raw = read_csv("./data/FAS_litters.csv",
@@ -122,16 +137,18 @@ litters_data_with_vars = mutate(litters_data_selected_cols,
   group = tolower(group))
 ```
 
-Use piping
+Another option can be using nested function calls, which is also confusing.
+
+A better way is to use piping
 
 ```{r}
-read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") %>%
+litters_data = 
+  read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") %>%
   janitor::clean_names() %>%
   select(-pups_survive) %>%
   mutate(
     wt_gain = gd18_weight - gd0_weight,
-    group = tolower(group))%>%
-filter(!is.na(gd0_weight))
+    group = tolower(group))
 ```
 
 
@@ -146,7 +163,19 @@ litters_data =
     wt_gain = gd18_weight - gd0_weight,
     group = tolower(group)) %>%
   filter(!is.na(gd0_weight)) %>%
-  lm(gd18_weight ~ gd0_weight, data = .)
+  lm(gd18_weight ~ gd0_weight, data = .) %>% 
+  broom::tidy()
+```
+
+Learning Assessment 3
+
+```{r}
+pups_data = 
+  read_csv(file = "./data/FAS_pups.csv", col_types = "ciiiii") %>%            
+  janitor::clean_names() %>%
+  filter(sex == 1) %>% 
+  select(-pd_ears) %>% 
+  mutate(pd_pivotgt7 = pd_pivot >= 7)
 ```
 
 
